# ai-web-summarizer

./: .env_example  README.md  main.py  pyproject.toml
docs/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_config_py.html  z_145eef247bfb46b6_settings_py.html  z_3e69227b4eea8344___init___py.html  z_3e69227b4eea8344_client_py.html  z_3e69227b4eea8344_model_py.html  z_3e69227b4eea8344_prompts_py.html  z_822910f7d9f0f61f___init___py.html  z_822910f7d9f0f61f_html_text_extractor_py.html  z_c0152e0f41c29602___init___py.html  z_c0152e0f41c29602_file_writer_py.html  z_c0152e0f41c29602_schema_py.html  z_c0152e0f41c29602_summary_generation_py.html  z_c0152e0f41c29602_summary_generator_py.html  z_c0152e0f41c29602_summary_service_py.html
docs/examples/: summary_output.json  summary_output.yaml
prompts/: summary.yaml
src/: settings.py
src/llm/: client.py  model.py  prompts.py
src/scrapper/: html_text_extractor.py
src/service/: file_writer.py  schema.py  summary_service.py
tests/: test_file_writer.py  test_llm_client.py  test_load_prompts.py  test_scrapper.py  test_settings.py  test_summary_service.py
